# Computer-Graphics-COSC363

Lab10-OpenGL4_Tesselation/: Lab10.sln  Lab10.vcxproj  QuadPatches.cpp  (+4 more)
Lab3-Illumination_TextureMapping/: CMakeLists.txt  lab3.aps  lab3.sln  lab3.vcxproj  lab3.vcxproj.filters  resource.h
Lab3-Illumination_TextureMapping/Debug/: lab3.exe.recipe  lab3.ilk  lab3.vcxproj.FileListAbsolute.txt  vc143.idb
Lab3-Illumination_TextureMapping/Debug/lab3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lab3.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
Lab3-Illumination_TextureMapping/II_Earth/: Earth.cpp
Lab3-Illumination_TextureMapping/I_Spaceship/: Rock.tga  Spaceship.cpp
Lab3-Illumination_TextureMapping/x64/Debug/: vc143.idb
Lab3-Illumination_TextureMapping/x64/Debug/lab3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lab3.lastbuildstate  rc.command.1.tlog  rc.write.1.tlog
Lab4-ObjectModelling/: CMakeLists.txt  Lab4.sln  Lab4.vcxproj  Lab4.vcxproj.filters
Lab4-ObjectModelling/Debug/: Lab4.exe.recipe  Lab4.ilk  Lab4.vcxproj.FileListAbsolute.txt  vc143.idb
Lab4-ObjectModelling/Debug/Lab4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lab4.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Lab4-ObjectModelling/II_Vase/: Vase.cpp
Lab4-ObjectModelling/I_Walls/: Walls.cpp
Lab4-ObjectModelling/x64/Debug/: vc143.idb
Lab4-ObjectModelling/x64/Debug/Lab4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lab4.lastbuildstate
(+108 files in other folders)
